# godot-rs

godot/: hello_world.gdextension  icon.svg.import  project.godot
godot/scene/: scene1.tscn
godot/script/: test.gd
rust/: Cargo.toml
rust/src/: lib.rs  player.rs  test_obj.rs
