[package]
name = "ext-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
godot = { version = "0.1.2", features = ["api-4-2"] }
